--- a/Views/Home/PacienteInsert.cshtml
+++ b/Views/Home/PacienteInsert.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewData["Title"] = "InsertInfouserView";
 }
-<!-- Cabecera Tabal datod -->
+<!-- Cabecera Tabal datod 
 <div class="white-box bg-theme m-b-0">
     <div class="city-weather-widget">
        <div class="col-sm-6">
@@ -45,6 +45,13 @@
               
     </div>
 </div>
+-->
+<!--Buscador-->
+<li class="in">
+    <form role="search" class="app-search hidden-sm hidden-xs m-r-10">
+        <input type="text" placeholder="Search..." class="form-control"> <a href="" class="active"><i class="fa fa-search"></i></a>
+    </form>
+</li>
 <!-- Custom CSS -->
 <div class="table-responsive">
 <table class="table color-table inverse-table" >
@@ -73,7 +80,7 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <label class="control-label col-md-3">First Name:</label>
+                                    <label class="control-label col-md-3">Nombre:</label>
                                     <div class="col-md-9">
                                         <p class="form-control-static"> John </p>
                                     </div>
@@ -82,7 +89,7 @@
                             <!--/span-->
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <label class="control-label col-md-3">Last Name:</label>
+                                    <label class="control-label col-md-3">Apellidos:</label>
                                     <div class="col-md-9">
                                         <p class="form-control-static"> Doe </p>
                                     </div>
@@ -90,103 +97,127 @@
                             </div>
                             <!--/span-->
                         </div>
+
                         <!--/row-->
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <label class="control-label col-md-3">Gender:</label>
+                                    <label class="control-label col-md-3">Genero:</label>
                                     <div class="col-md-9">
-                                        <p class="form-control-static"> Male </p>
+                                         <select class="form-control">
+        <option>Modulator</option>
+        <option>Admin</option>
+        <option>User</option>
+        <option>Subscriber</option>
+    </select>
+
+
                                     </div>
                                 </div>
                             </div>
-                            <!--/span-->
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <label class="control-label col-md-3">Date of Birth:</label>
-                                    <div class="col-md-9">
-                                        <p class="form-control-static"> 11/06/1987 </p>
-                                    </div>
-                                </div>
-                            </div>
-                            <!--/span-->
+
                         </div>
-                        <!--/row-->
+                            <div class="row">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            <label class="control-label col-md-3">Edad:</label>
+                                            <div class="col-md-9">
+                                                <p class="form-control-static">  </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                <!--/span-->
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            <label class="control-label col-md-3">Fecha de Nacimiento:</label>
+                                            <div class="col-md-9">
+                                                <p class="form-control-static"> 11/06/1987 </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                <!--/span-->
+                            </div>
+                      </div>
                         <div class="row">
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <label class="control-label col-md-3">Category:</label>
-                                    <div class="col-md-9">
-                                        <p class="form-control-static"> Category1 </p>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label class="control-label col-md-3">Direccion:</label>
+                                        <div class="col-md-9">
+                                            <p class="form-control-static">  </p>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <!--/span-->
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <label class="control-label col-md-3">Membership:</label>
-                                    <div class="col-md-9">
-                                        <p class="form-control-static"> Free </p>
+                                <!--/span-->
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label class="control-label col-md-3">Telefono:</label>
+                                        <div class="col-md-9">
+                                            <p class="form-control-static"> 11/06/1987 </p>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <!--/span-->
-                        </div>
-                        <!--/row-->
-                        <h3 class="box-title">Address</h3>
-                        <hr class="m-t-0 m-b-40">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <label class="control-label col-md-3">Address:</label>
-                                    <div class="col-md-9">
-                                        <p class="form-control-static"> E104, Dharti-2, Near silverstar mall </p>
-                                    </div>
-                                </div>
+                                <!--/span-->
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <label class="control-label col-md-3">City:</label>
-                                    <div class="col-md-9">
-                                        <p class="form-control-static"> Bhavnagar </p>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label class="control-label col-md-3">Instruccion:</label>
+                                        <div class="col-md-9">
+                                            <p class="form-control-static">  </p>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <!--/span-->
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <label class="control-label col-md-3">State:</label>
-                                    <div class="col-md-9">
-                                        <p class="form-control-static"> Gujarat </p>
+                                <!--/span-->
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label class="control-label col-md-3">Institucion:</label>
+                                        <div class="col-md-9">
+                                            <p class="form-control-static"> 11/06/1987 </p>
+                                        </div>
                                     </div>
                                 </div>
+                                <!--/span-->
                             </div>
-                            <!--/span-->
                         </div>
-                        <!--/row-->
                         <div class="row">
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <label class="control-label col-md-3">Post Code:</label>
-                                    <div class="col-md-9">
-                                        <p class="form-control-static"> 457890 </p>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label class="control-label col-md-3">Fuente Informacion:</label>
+                                        <div class="col-md-9">
+                                            <p class="form-control-static">  </p>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <!--/span-->
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <label class="control-label col-md-3">Country:</label>
-                                    <div class="col-md-9">
-                                        <p class="form-control-static"> India </p>
+                                <!--/span-->
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label class="control-label col-md-3">Correo Electronico:</label>
+                                        <div class="col-md-9">
+                                            <p class="form-control-static"> 11/06/1987 </p>
+                                        </div>
                                     </div>
                                 </div>
+                                <!--/span-->
                             </div>
-                            <!--/span-->
                         </div>
-                    </div>
+                            <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label class="control-label col-md-3">Fecha entrega Informe:</label>
+                                        <div class="col-md-9">
+                                    <p class="form-control-static">@DateTime.Now.ToString() </p>
+                                        </div>
+                                    </div>
+                                </div>
+
+
+
+
+                            <!--/span-->
                     <div class="form-actions">
                         <div class="row">
                             <div class="col-md-6">
@@ -209,3 +240,4 @@
        
 
 
+                                        ☺
