--- a/Views/Home/UserSearch.cshtml
+++ b/Views/Home/UserSearch.cshtml
@@ -7,9 +7,7 @@
 
 <div class="col-md-6">
     <div class="white-box">
-        <h3 class="box-title m-b-0">Form with right icon</h3>
-        <p class="text-muted m-b-30 font-13"> Use Bootstrap's predefined grid classes for horizontal form </p>
-        <form class="form-horizontal">
+          <form class="form-horizontal">
          @foreach (DataRow row in @Model.Rows)
                         {
             <div class="form-group">
@@ -35,7 +33,7 @@
                 <label for="inputPassword3" class="col-sm-3 control-label">Password*</label>
                 <div class="col-sm-9">
                     <div class="input-group">
-                        <input type="password" class="form-control" id="exampleInputpwd2" placeholder="Enter pwd">
+                            <input type="password" class="form-control" id="exampleInputpwd2" placeholder="@row["Password"]">
                         <div class="input-group-addon"><i class="ti-lock"></i></div>
                     </div>
                 </div>
@@ -44,7 +42,7 @@
                 <label for="inputPassword4" class="col-sm-3 control-label">Re Password*</label>
                 <div class="col-sm-9">
                     <div class="input-group">
-                        <input type="password" class="form-control" id="exampleInputpwd2" placeholder="Re Enter pwd">
+                        <input type="password" class="form-control" id="exampleInputpwd2" placeholder="Re  pwd">
                         <div class="input-group-addon"><i class="ti-lock"></i></div>
                     </div>
                 </div>
