--- a/Views/Shared/_Main.cshtml
+++ b/Views/Shared/_Main.cshtml
@@ -163,75 +163,12 @@
                             </li>
                         </ul>
                     </li>
-                    <!-- .Megamenu -->
-                    <!-- <li class="mega-dropdown">
-                        <a class="dropdown-toggle waves-effect waves-light" data-toggle="dropdown" href="#"><span class="hidden-xs">Mega</span> <i class="icon-options-vertical"></i></a>
-                        <ul class="dropdown-menu mega-dropdown-menu animated bounceInDown">
-                            <li class="col-sm-3">
-                                <ul>
-                                    <li class="dropdown-header">Forms Elements</li>
-                                    <li><a href="form-basic.html">Basic Forms</a></li>
-                                    <li><a href="form-layout.html">Form Layout</a></li>
-                                    <li><a href="form-advanced.html">Form Addons</a></li>
-                                    <li><a href="form-material-elements.html">Form Material</a></li>
-                                    <li><a href="form-float-input.html">Form Float Input</a></li>
-                                    <li><a href="form-upload.html">File Upload</a></li>
-                                    <li><a href="form-mask.html">Form Mask</a></li>
-                                    <li><a href="form-img-cropper.html">Image Cropping</a></li>
-                                    <li><a href="form-validation.html">Form Validation</a></li>
-                                </ul>
-                            </li>
-                            <li class="col-sm-3">
-                                <ul>
-                                    <li class="dropdown-header">Advance Forms</li>
-                                    <li><a href="form-dropzone.html">File Dropzone</a></li>
-                                    <li><a href="form-pickers.html">Form-pickers</a></li>
-                                    <li><a href="form-wizard.html">Form-wizards</a></li>
-                                    <li><a href="form-typehead.html">Typehead</a></li>
-                                    <li><a href="form-xeditable.html">X-editable</a></li>
-                                    <li><a href="form-summernote.html">Summernote</a></li>
-                                    <li><a href="form-bootstrap-wysihtml5.html">Bootstrap wysihtml5</a></li>
-                                    <li><a href="form-tinymce-wysihtml5.html">Tinymce wysihtml5</a></li>
-                                </ul>
-                            </li>
-                            <li class="col-sm-3">
-                                <ul>
-                                    <li class="dropdown-header">Table Example</li>
-                                    <li><a href="basic-table.html">Basic Tables</a></li>
-                                    <li><a href="table-layouts.html">Table Layouts</a></li>
-                                    <li><a href="data-table.html">Data Table</a></li>
-                                    <li><a href="bootstrap-tables.html">Bootstrap Tables</a></li>
-                                    <li><a href="responsive-tables.html">Responsive Tables</a></li>
-                                    <li><a href="editable-tables.html">Editable Tables</a></li>
-                                    <li><a href="foo-tables.html">FooTables</a></li>
-                                    <li><a href="jsgrid.html">JsGrid Tables</a></li>
-                                </ul>
-                            </li>
-                            <li class="col-sm-3">
-                                <ul>
-                                    <li class="dropdown-header">Charts</li>
-                                    <li> <a href="flot.html">Flot Charts</a> </li>
-                                    <li><a href="morris-chart.html">Morris Chart</a></li>
-                                    <li><a href="chart-js.html">Chart-js</a></li>
-                                    <li><a href="peity-chart.html">Peity Charts</a></li>
-                                    <li><a href="knob-chart.html">Knob Charts</a></li>
-                                    <li><a href="sparkline-chart.html">Sparkline charts</a></li>
-                                    <li><a href="extra-charts.html">Extra Charts</a></li>
-                                </ul>
-                            </li>
-
-                        </ul>
-                    </li> -->
-                    <!-- /.Megamenu -->
+                  
                 </ul>
                 <ul class="nav navbar-top-links navbar-right pull-right">
-                    <li>
-                        <form role="search" class="app-search hidden-sm hidden-xs m-r-10">
-                            <input type="text" placeholder="Search..." class="form-control"> <a href=""><i class="fa fa-search"></i></a>
-                        </form>
-                    </li>
+               
                     <li class="dropdown">
-                        <a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="#"> <img src="~/Adm/plugins/images/users/varun.jpg" alt="user-img" width="36" class="img-circle"><b class="hidden-xs">Steave</b><span class="caret"></span> </a>
+                        <a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="#"> <img src="~/Adm/plugins/images/users/varun.jpg" alt="user-img" width="36" class="img-circle"> <b class="hidden-xs"></b> @ViewBag.SessionName <span class="caret"></span> </a>
                         <ul class="dropdown-menu dropdown-user animated flipInY">
                             <li>
                                 <div class="dw-user-box">
@@ -282,37 +219,34 @@
                             <li><a a asp-controller="Home" asp-action="Logout"><i class="fa fa-power-off"></i> <span class="hide-menu">Cerrar Sesion</span></a></li>
                         </ul>
                     </li>
-                    <li>
-                        <a href="index.html" class="waves-effect active"><i class="mdi mdi-av-timer fa-fw" data-icon="v"></i> <span class="hide-menu"> Dashboard <span class="fa arrow"></span> <span class="label label-rouded label-inverse pull-right">4</span></span></a>
-                        <ul class="nav nav-second-level">
-                            <li> <a href="index.html"><i class=" fa-fw">1</i><span class="hide-menu">Dashboard 1</span></a> </li>
-                            <li> <a href="index2.html"><i class=" fa-fw">2</i><span class="hide-menu">Dashboard 2</span></a> </li>
-                            <li> <a href="index3.html"><i class=" fa-fw">3</i><span class="hide-menu">Dashboard 3</span></a> </li>
-                        </ul>
-                    </li>
+                         
+                    <!-- ============================================================== -->
                     <li> <a href="widgets.html" class="waves-effect"><i class="mdi mdi-settings fa-fw"></i> <span class="hide-menu">Usuarios</span></a>
                         <ul class="nav nav-second-level">
-                            <li> <a href="UserView?usr_id=1"><i class=" fa-fw">B</i><span class="hide-menu">Buscar</span></a> </li>
+                            <li> <a href="UserSearch?usr_id=1"><i class=" fa-fw">B</i><span class="hide-menu">Buscar</span></a> </li>
                             
-                            <li> <a href="index2.html"><i class=" fa-fw">A</i><span class="hide-menu">Agregar Nuevo</span></a> </li>
+                            <li> <a href="UserView"><i class=" fa-fw">A</i><span class="hide-menu">Agregar Nuevo</span></a> </li>
                             
                         </ul>
                     
                     </li>
-                   
+           
+             
+                    <!-- ============================================================== -->
                     <li class="devider"></li>
-                 <li> <a href="widgets.html" class="waves-effect"><i class="mdi mdi-settings fa-fw"></i> <span class="hide-menu">Datos </span></a>
+                    <li>
+                        <a href="widgets.html" class="waves-effect"><i class="mdi mdi-settings fa-fw"></i> <span class="hide-menu">Pacientes </span></a>
                         <ul class="nav nav-second-level">
-                            <li> <a href="InsertInfouserView?usr_id=1"><i class=" fa-fw">B</i><span class="hide-menu">Buscar</span></a> </li>
-                            
-                            <li> <a href="InsertInfouserView"><i class=" fa-fw">A</i><span class="hide-menu">Agregar Nuevo</span></a> </li>
-                           
+                            <li> <a href="PacienteSearchview"><i class=" fa-fw">B</i><span class="hide-menu">Nuevo</span></a> </li>
+
+                            <li> <a href="PacienteView"><i class=" fa-fw">A</i><span class="hide-menu">Ver Pacientes</span></a> </li>
+
                         </ul>
-                    
+
                     </li>
-                                      
+
                     <li class="devider"></li>
-                    
+                    <!-- ============================================================== -->
                 </ul>
             </div>
         </div>
@@ -323,7 +257,9 @@
         <!-- Page Content -->
         <!-- ============================================================== -->
         <div id="page-wrapper">
+
            @RenderBody()
+        
         </div>
         <!-- /#page-wrapper -->
     </div>
